@@ -94,7 +94,8 @@
  */
 @interface CCDirectorDisplayLink : CCDirectorIOS
 {
-	id displayLink;
+	CADisplayLink	*displayLink_;
+	CFTimeInterval	lastDisplayTime_;
 }
 -(void) mainLoop:(id)sender;
 @end
